# apiv2

./: #.gitpod.Dockerfile  .Pipfile  .bashrc  .breathecode.yml  .codespaces.Dockerfile  .coveragerc  .dev.Dockerfile  .dockerignore  .env.example  .flags  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.Dockerfile.back  .gitpod.yml  .gitpod.yml.back  .google_credentials.json  .heroku.Dockerfile  .newrelic.Dockerfile  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .shell.Dockerfile  404.html  CHANGELOG.md  Dockerfile  Dockerfile.environment  Makefile  Pipfile  Procfile  README.md  app.json  bun.lockb  conftest.py  core.1055  core.1112  core.1123  core.1175  core.1228  core.1239  (+51 more)
.cursor/: mcp.json
.cursor/plans/: academy_grant_consumables_endpoint.plan.md  academy_managed_roles_single_role.plan.md  add_bill_detail_api_endpoint_with_consumptions_fe3fd56e.plan.md  admissions_scope_skill.plan.md  breathecode_api_agent_skills.plan.md  django_diagnostics_layer.plan.md  media_category_academy_and_manageable.plan.md  provisioning_settings_and_credentials_api_skill.plan.md  retroactive_consumable_stock_with_safeguards_f330515e.plan.md  vps_provisioning_vendor_services.plan.md
.cursor/rules/: admin.mdc  breathecode-api-index-maintenance.mdc  celery.mdc  dependencies.mdc  django.mdc  helpers.mdc  infrastructure.mdc  scheduler.mdc  security.mdc  serializers.mdc  services.mdc  signals.mdc  skill-authoring.mdc  supervisors.mdc  tests.mdc  urls.mdc  user-validations.mdc  views.mdc
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json  finishContainerSetup.sh  onCodeUpdated.sh  onCreateCommand.sh  postCodeUpdated.sh  postStartCommand.sh  startup.sh  waitForServices.sh
.devcontainer/codespaces/: Dockerfile  devcontainer.json  docker-compose.extend.yml
.devcontainer/local/: devcontainer.json
.devcontainer/ubuntu/: devcontainer.json
.devcontainer2/: devcontainer.json  docker-compose.yml
.github/workflows/: checks.yml  dependencies.yml  dependencies.yml.backup  dockerhub.yml  github-pages.yml  github-pages.yml.backup  linter.yml  linter.yml.backup  migrations.yml  migrations.yml.backup  new-relic-change-tracking.yml  precommit.yml  python-app.yml  test.yml
.windsurf/rules/: admin.md  celery.md  dependencies.md  django.md  helpers.md  infrastructure.md  scheduler.md  security.md  serializers.md  services.md  signals.md  supervisors.md  tests.md  user-validations.md  views.md
4geeks-libraries/: index.html
LLM-DOCS/ACADEMY_PLANS/: index.html
LLM-DOCS/ADD_STUDENT/: index.html
LLM-DOCS/AUTHENTICATION/: index.html
LLM-DOCS/BC_AUTH_FIRST_PARTY_APPS/: index.html
LLM-DOCS/BC_CHECKOUT/: index.html
LLM-DOCS/BC_CHECKOUT_CONSUMABLE/: index.html
LLM-DOCS/BC_COUPONS/: index.html
LLM-DOCS/BC_INVOICE/: index.html
LLM-DOCS/BC_REFUNDS/: index.html
LLM-DOCS/BC_SERVICE_STOCK_STATUS/: index.html
LLM-DOCS/BC_STAFF_INVITES/: index.html
LLM-DOCS/BUILD_SYLLABUS/: index.html
LLM-DOCS/COHORTS/: index.html
LLM-DOCS/COHORTS_CREATE/: index.html
LLM-DOCS/COHORT_REPORT_CALCULATION/: index.html
LLM-DOCS/COUPONS/: index.html
LLM-DOCS/EVENT_SUSPENSION/: index.html
LLM-DOCS/EVENT_TYPES_AND_VISIBILITY/: index.html
LLM-DOCS/FEEDBACK_TAGS_SUMMARY/: index.html
LLM-DOCS/Financing_Plan_Seats_Changelog/: index.html
LLM-DOCS/HOOKS_MANAGEMENT/: index.html
LLM-DOCS/LITELLM_SERVICE/: index.html
LLM-DOCS/LIVE_CLASSES/: index.html
LLM-DOCS/MANAGE_SINGLE_ASSESSMENT/: index.html
LLM-DOCS/MANAGE_SINGLE_ASSET/: index.html
LLM-DOCS/MANAGE_SINGLE_COHORT/: index.html
LLM-DOCS/MARKETING_SHORTCUTS/: index.html
LLM-DOCS/NOTIFICATION_REGISTRY/: index.html
LLM-DOCS/PAYMENT_REPORT/: index.html
LLM-DOCS/PROFILE/: index.html
LLM-DOCS/SEATS_AND_TEAMS/: index.html
LLM-DOCS/SERVICE_DEPROVISION_SYSTEM/: index.html
LLM-DOCS/STUDENT_REPORT/: index.html
LLM-DOCS/STUDENT_VIEW/: index.html
LLM-DOCS/SURVEYS_POSTMAN_CHECKLIST/: index.html
LLM-DOCS/SURVEYS_SYSTEM/: index.html
LLM-DOCS/SYLLABUS/: index.html
LLM-DOCS/Student_Activity/: index.html
LLM-DOCS/TALENT_CAREER_MAP/: index.html
LLM-DOCS/assignment_telemetry/: index.html
LLM-DOCS/github_credential_connect/: index.html
LLM-DOCS/manage_roles/: index.html
LLM-DOCS/reports/: index.html
advanced/csv-export-customization/: index.html
advanced/supervisor/: index.html
agent-docs/ACADEMY_PLANS/: index.html
agent-docs/ADD_STUDENT/: index.html
agent-docs/AUTHENTICATION/: index.html
agent-docs/BC_AUTH_FIRST_PARTY_APPS/: index.html
agent-docs/BC_CHECKOUT/: index.html
agent-docs/BC_CHECKOUT_CONSUMABLE/: index.html
agent-docs/BC_INVOICE/: index.html
bc/: __init__.py
breathecode/: __init__.py  asgi.py  celery.py  configurable_settings.py  middlewares.py  renderers.py  schema.py  settings.py  setup.py  sql_keywords.json  test_settings.py  urls.py  utils.py  wsgi.py
capyc/: __about__.py
css/: custom.css
csv/: convert_csv_google.py  converted.csv  sample.csv
docs/: 4geeks-libraries.md  README.md  breathecode-api.md  capabilities.md  editor-configs.md  endponts.md  google-cloud-functions.md  icons.md  index.md  registry-trusted-urls.md  scripts.md  signals.md  testing.md  workers.md
endpoints/: index.html
memory-bank/: implementation-checklist.md
openapi/: README.md
payments/: index.html
pytest_bc/: fixtures.py
registry-trusted-urls/: index.html
scripts/: backup_syllabus_models.py  build.py  celery.py  cmd.py  convert_csv_google.py  coverage.py  coverage_ci.py  create_bucket.py  docker-build.sh  docker-entrypoint.sh  docker_build.py  docker_build_env.py  docker_build_shell.py  docker_entrypoint.py  docker_entrypoint_dev.py  environment.py  fix_pyenv.py  heroku_env_export.sh  md5.py  parallel_coverage.py  parallel_coverage_ci.py  parallel_test.py  parallel_test_ci.py  pending_migrations.py  postgres_get_server_cert.py  pre_commit.py  test.py  update_environments.py  update_sql_keywords_json.py
search/: search_index.json
settings/: __init__.py  general_pricing_ratios.json  general_pricing_ratios.py
temp/: .gitkeep
workers/: index.html
(+4081 files in other folders)
