[tool.pdm.scripts]
start = "python manage.py runserver 0.0.0.0:8000"
format = "pre-commit run --all-files"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
celery = "python -m scripts.celery"
dev = "heroku local"
test = "pytest --disable-pytest-warnings --nomigrations --durations=1"
ptest = "pytest --disable-pytest-warnings -n auto --nomigrations --durations=1"
ptest_ci = "pytest --disable-pytest-warnings -n auto"
coverage = "python -m scripts.coverage --nomigrations --durations=1"
pcoverage = "python -m scripts.parallel_coverage --nomigrations --durations=1"
cov = "python -m scripts.coverage --nomigrations --durations=1"
pcov = "python -m scripts.parallel_coverage --nomigrations --durations=1"
coverage_ci = "pytest --disable-pytest-warnings --cov=breathecode --cov-report xml"
pcov_ci = "pytest --disable-pytest-warnings --cov=breathecode --cov-report xml -n auto"
update_sql_keywords = "python -m scripts.update_sql_keywords_json"
create_bucket = "python -m scripts.create_bucket"
docker_build = "python -m scripts.docker_build"
docker_build_dev = "python -m scripts.docker_build_dev"
install_precommit = "pre-commit install"
lint = "pre-commit run"
sync_active_campaign = "python manage.py sync_with_active_campaign"
delete_duplicates = "python manage.py delete_duplicates"
docs = "mkdocs serve --livereload"
generate_docs = "mkdocs build"
doctor = "python -m scripts.doctor"
docs_deploy = "mkdocs gh-deploy -c"

[project]
name = "apiv2"
version = ""
description = ""
authors = [
    {name = "breatheco-de", email = "aalejo@gmail.com"},
]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "django==3.2.14",
    "djangorestframework~=3.13.1",
    "serpy",
    "gunicorn",
    "requests",
    "dj-database-url",
    "django-heroku",
    "django-cors-headers",
    "django-phonenumber-field[phonenumberslite]",
    "activecampaign-python",
    "schema",
    "mixer",
    "pytest-django",
    "pygithub",
    "google-cloud-datastore",
    "pyfcm",
    "twilio",
    "google-cloud-storage",
    "celery",
    "redis",
    "eventbrite",
    "rollbar",
    "pillow",
    "django-redis",
    "pytz",
    "hiredis",
    "icalendar",
    "djangorestframework-csv",
    "python-slugify",
    "pyyaml",
    "uritemplate",
    "psycopg2-binary",
    "django-sql-explorer[xls]",
    "google-cloud-ndb",
    "whitenoise[brotli]",
    "timeago",
    "markdown",
    "python-frontmatter",
    "beautifulsoup4",
    "lxml",
    "nbconvert~=6.5.0",
    "numpy>=1.23.1",
]


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest-cov",
    "coverage",
    "pytest",
    "coveralls",
    "yapf",
    "pre-commit",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "pytest-xdist",
]
