[tool.poetry.scripts]
dev = "scripts.cmd:dev"
start = "scripts.cmd:start"
createsuperuser = "scripts.cmd:createsuperuser"
test = "scripts.cmd:test"
"test:ci" = "scripts.parallel_coverage_ci:run"
"test:coverage" = "scripts.cmd:test_coverage"
"test:c" = "scripts.cmd:test_coverage"
"test:parallel" = "scripts.parallel_test:run"
"test:p" = "scripts.parallel_test:run"
startapp = "scripts.cmd:startapp"
migrate = "scripts.cmd:migrate"
makemigrations = "scripts.cmd:makemigrations"
format = "scripts.cmd:format"
celery = "scripts.cmd:celery"
"docs" = "scripts.cmd:docs_serve"
"docs:build" = "scripts.cmd:docs_build"
"docs:deploy" = "scripts.cmd:docs_deploy"
lint = "scripts.cmd:lint"
update-sql-keywords = "scripts.update_sql_keywords_json:write_json"
"precommit:install" = "scripts.cmd:install_precommit"
"docker:build" = "scripts.docker_build:run"
"fttests" = "scripts.cmd:fttests"
# flake8 = "scripts.cmd:flake8"

[tool.poetry.requires-plugins]
poetry-plugin-dotenv = ">=2.6.1"

[tool.poetry]
package-mode = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
capy-core = { extras = ["pytest"], version = "^1.3.1" }
pytest-django = "^4.9.0"
pytest-env = "^1.1.5"
pytest-asyncio = "^0.25.2"
coverage = "^7.6.10"
mixer = "^7.2.2"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
mccabe = "^0.7.0"
pep8-naming = "^0.14.1"
flake8-bugbear = "^24.12.12"
black = "^24.10.0"
pre-commit = "^4.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.50"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.13.0"

[tool.yapf]
column_limit = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120 # Set your desired line length here

[project]
name = "scripts" # do not change this because this allows to run the scripts
version = "0.1.0"
description = ""
authors = [{ name = "jefer94", email = "jdefreitaspinto@gmail.com" }]
readme = "docs/README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "serpy (>=0.3.1,<0.4.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "django-heroku (>=0.3.1,<0.4.0)",
    "django-cors-headers (>=4.6.0,<5.0.0)",
    "django-phonenumber-field[phonenumberslite] (>=8.0.0,<9.0.0)",
    "activecampaign-python (>=1.0.10,<2.0.0)",
    "schema (>=0.7.7,<0.8.0)",
    "mixer (>=7.2.2,<8.0.0)",
    "pygithub (>=2.5.0,<3.0.0)",
    "google-cloud-datastore (>=2.20.2,<3.0.0)",
    "pyfcm (>=2.0.7,<3.0.0)",
    "twilio (>=9.4.3,<10.0.0)",
    "google-cloud-storage (>=2.19.0,<3.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "eventbrite (>=3.3.5,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "django-redis (>=5.4.0,<6.0.0)",
    "pytz (>=2024.2,<2025.0)",
    "hiredis (>=3.1.0,<4.0.0)",
    "icalendar (>=6.1.1,<7.0.0)",
    "djangorestframework-csv (>=3.0.2,<4.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "google-cloud-ndb (>=2.3.2,<3.0.0)",
    "whitenoise[brotli] (>=6.8.2,<7.0.0)",
    "channels (>=4.2.0,<5.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "timeago (>=1.0.16,<2.0.0)",
    "markdown (>=3.7,<4.0)",
    "python-frontmatter (>=1.1.0,<2.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "twisted[http2,tls] (>=24.11.0,<25.0.0)",
    "nbconvert (>=7.16.5,<8.0.0)",
    "certifi (>=2024.12.14,<2025.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "google-cloud-recaptcha-enterprise (>=1.26.1,<2.0.0)",
    "coralogix-logger (>=2.0.6,<3.0.0)",
    "stripe (>=11.4.1,<12.0.0)",
    "currencies (>=2020.12.12,<2021.0.0)",
    "babel (>=2.16.0,<3.0.0)",
    "openai (>=1.59.9,<2.0.0)",
    "async-timeout (>=5.0.1,<6.0.0)",
    "exceptiongroup (>=1.2.2,<2.0.0)",
    "google-cloud-firestore (>=2.20.0,<3.0.0)",
    "newrelic (>=10.4.0,<11.0.0)",
    "graphene-django (>=3.2.2,<4.0.0)",
    "graphene-django-optimizer (>=0.10.0,<0.11.0)",
    "premailer (>=3.10.0,<4.0.0)",
    "google-cloud-bigquery (>=3.29.0,<4.0.0)",
    "redis[hiredis] (>=5.2.1,<6.0.0)",
    "brotli (>=1.1.0,<2.0.0)",
    "circuitbreaker (>=2.0.0,<3.0.0)",
    "kombu (>=5.4.2,<6.0.0)",
    "zstandard (>=0.23.0,<0.24.0)",
    "psycopg[binary,pool] (>=3.2.4,<4.0.0)",
    "adrf (>=0.1.9,<0.2.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "django-storages[django] (>=1.14.4,<2.0.0)",
    "aiohttp[speedups] (>=3.11.11,<4.0.0)",
    "aiodns (>=3.2.0,<4.0.0)",
    "celery-task-manager[django] (>=1.10.2,<2.0.0)",
    "django-sql-explorer[xls] (>=5.3,<6.0)",
    "contextlib2 (>=21.6.0,<22.0.0)",
    "google-apps-meet (>=0.1.11,<0.2.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "capy-core[django] (>=1.3.1,<2.0.0)",
    "google-api-python-client (>=2.159.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "uvicorn-worker (>=0.3.0,<0.4.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "linked-services[aiohttp,django,requests] (>=1.3.1,<2.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "amqp (>=5.3.1,<6.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
